objects/Verification__c/Verification__c.object-meta.xml
<CustomObject>
    <label>Verifications</label>
    <nameField>
        <displayFormat>VE-{00000}</displayFormat>
        <label>Verifications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>