objects/Verification__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Verified</fullName>
            </value>
            <value>
                <fullName>Preliminary Approval</fullName>
            </value>
            <value>
                <fullName>Proxy Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>