objects/Verification__c/fields/Approval_Note__c.field-meta.xml
<CustomField>
    <fullName>Approval_Note__c</fullName>
    <description>Deprecated as part of SS-11783</description>
    <label>DEPRECATED - Approval Note</label>
    <length>150</length>
    <type>Text</type>
</CustomField>