objects/Verification__c/fields/Main_Point_of_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Main_Point_of_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Description: Field used with Snowflake. Only editable with “Partner Enablement Permissions” permission set. SS-12685</description>
    <inlineHelpText>2nd point of contact for service offering.</inlineHelpText>
    <label>Main Point of Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verifications (Contact)</relationshipLabel>
    <relationshipName>Verifications1</relationshipName>
    <type>Lookup</type>
</CustomField>