objects/Verification__c/fields/Main_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Point_of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS-12299: Field used with Snowflake. Only editable with “Partner Enablement Permissions” permission set.</description>
    <inlineHelpText>Main point of contact for service offering.</inlineHelpText>
    <label>Main Point of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verifications</relationshipLabel>
    <relationshipName>Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>