objects/Verification__c/fields/Reason_For_Preliminary_Verification__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Preliminary_Verification__c</fullName>
    <label>Reason For Preliminary Verification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>