objects/Verification__c/fields/Services_Battlecard__c.field-meta.xml
<CustomField>
    <fullName>Services_Battlecard__c</fullName>
    <description>This is filled out in the interviewing/ Q&amp;A with the Partner. SS-11783</description>
    <inlineHelpText>Enter link to Battlecard</inlineHelpText>
    <label>Services Battlecard</label>
    <type>Url</type>
</CustomField>