objects/Verification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>2025-11-20 SS-11986 Added new values.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Cloud Deployment</fullName>
            </value>
            <value>
                <fullName>Cyber Insurance</fullName>
            </value>
            <value>
                <fullName>Microsoft VSO</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>MSP-EM</fullName>
            </value>
            <value>
                <fullName>MSP-RS</fullName>
            </value>
            <value>
                <fullName>On-Prem Deployment</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>ServiceNow VSO</fullName>
            </value>
            <value>
                <fullName>Support L1/L2</fullName>
            </value>
            <value>
                <fullName>VSO</fullName>
            </value>
            <value>
                <fullName>MSP EM/RS Accredited</fullName>
                <isActive>false</isActive>
                <label>MSP EM/RS Accredited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>