objects/Verification__c/fields/Verifications_18ID__c.field-meta.xml
<CustomField>
    <fullName>Verifications_18ID__c</fullName>
    <formula>(CASESAFEID(Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verifications 18ID</label>
    <type>Text</type>
</CustomField>