objects/Verification__c/validationRules/MainPointOfContact3_Active_AccountCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MainPointOfContact3_Active_AccountCheck</fullName>
    <active>true</active>
    <description>The rule fires if the selected Contact is inactive OR not tied to the same Partner Account . JIRA SS-12685</description>
    <errorConditionFormula>AND(

    NOT($Permission.DisableValidationRules),
    NOT(ISBLANK(Main_Point_of_Contact_3__c)),
OR(
    TEXT(Main_Point_of_Contact_3__r.Status__c) = &apos;Inactive&apos;,
    Main_Point_of_Contact_3__r.AccountId &lt;&gt;  Partner_Account__c 
))</errorConditionFormula>
    <errorDisplayField>Main_Point_of_Contact_3__c</errorDisplayField>
    <errorMessage>Main Point of Contact 3 must be Active and belong to the related Partner Account.</errorMessage>
</ValidationRule>