objects/Verification__c/listViews/All_Verifications.listView-meta.xml
<ListView>
    <fullName>All_Verifications</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>Approval_Level__c</columns>
    <columns>Type__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Services_Battlecard__c</columns>
    <columns>Reason_For_Preliminary_Verification__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Verifications</label>
</ListView>